--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
